Fix AWS S3 service.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #server.port = 8888
-spring.datasource.url=jdbc:mysql://localhost:3306/online_exam?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/online_exam1?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=ngocisnumber1
 spring.jpa.show-sql=true
@@ -22,9 +22,9 @@ logging.file=logs/application.log
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 #AWS
-isc.aws.access_key_id=####
-isc.aws.secret_access_key=####
-isc.s3.bucket=isc-quiz
+isc.aws.access_key_id=AKIAZDZNUGEZQ5DVCUFO
+isc.aws.secret_access_key=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
+isc.s3.bucket=quiz-app-vanh
 isc.aws.endpointUrl=https://s3-ap-southeast-1.amazonaws.com
 #SMTP
 spring.mail.host=smtp.gmail.com
