--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,8 +22,8 @@ logging.file=logs/application.log
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 #AWS
-isc.aws.access_key_id=AKIAZDZNUGEZQ5DVCUFO
-isc.aws.secret_access_key=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
+isc.aws.access_key_id=
+isc.aws.secret_access_key=
 isc.s3.bucket=quiz-app-vanh
 isc.aws.endpointUrl=https://s3-ap-southeast-1.amazonaws.com
 #SMTP
